# persistent-memory

./: .gitignore  AGENTS.md  README.md  README.tr.md  install.sh  pyproject.toml
.github/workflows/: tests.yml
eval/: recall_eval.py  recall_queries.example.json
scripts/: backup.sh  launchd.sh  restore.sh
skill/: SKILL.md
src/persistent_memory/: consolidate.py  doctor.py  embeddings.py  extraction_prompt.py  graph_ingest.py  i18n.py  index.py  lint.py  mcp_server.py  query_expansion.py  recall.py  records.py  (+4 more)
tests/: conftest.py  test_backup_restore.py  test_build_index.py  test_check_broken_links.py  test_check_duplicate_id.py  test_check_orphans.py  test_check_schema.py  test_check_staleness.py  test_check_supersession.py  test_check_unknown_keys.py  test_cli.py  test_collect_records.py  test_consolidate_cluster_only.py  test_consolidate_full_build.py  test_consolidate_graphsignal_load.py  test_consolidate_graphsignal_query.py  test_consolidate_knowledge_gaps.py  test_consolidate_orchestration.py  test_consolidate_parse_analysis.py  test_consolidate_ranked_ids.py  test_consolidate_salience_boost.py  test_consolidate_supersession_candidates.py  test_doctor_cli.py  test_doctor_fix.py  test_doctor_lightweight.py  test_doctor_scan.py  test_doctor_stdlib_only.py  test_embeddings.py  test_extraction_prompt.py  test_graph_ingest.py  test_i18n.py  test_index_row.py  test_install_doctor_preflight.py  test_install_dry_run.py  test_install_idempotent.py  test_install_launchd_entrypoint.py  test_lint.py  test_query_expansion.py  test_recall.py  test_recall_eval_gate.py  (+24 more)
(+90 files in other folders)
